cargo-features = ["different-binary-name"]

[package]
name = "bro-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "string"] }
clap_complete = "4.4.10"
regex = "1.10.3"
yaml-rust2 = "0.8.0"

[[bin]]
name = "bro-run"
filename = "bro"
path = "src/main.rs"
